# PytonProjekt4

./: README.md  pyproject.toml
.run/: Template Python tests.run.xml
main/: main.py
src/: __init__.py  category_counter.py  decorators.py  external_api.py  format_output.py  generators.py  main.py  masks.py  processing.py  read_csv.py  read_xlsx.py  search_str.py  test_log.txt  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_func.py  test_generators.py  test_log.txt  test_processing.py  test_utis.py  test_widget.py
